Fix bottom gap

--- a/css/foot.css
+++ b/css/foot.css
@@ -118,7 +118,7 @@ body.mbPREVIEW #METABOOKFOOT #METABOOKPAGEBAR .metabookpagespans span {
 body.mbPREVIEW #METABOOKFOOT #METABOOKPAGEBAR .metabookpagespans {
     top: 0px; bottom: auto;}
 body #METABOOKFOOT #METABOOKPAGEBAR .metabookpagespans span.current {
-    vertical-align: bottom; height: 50%;}
+    vertical-align: bottom; height: 22px;}
 body.mbPREVIEW #METABOOKFOOT #METABOOKPAGEBAR .metabookpagespans span.current {
     height: 100%;}
 body.mbPREVIEW #METABOOKFOOT #METABOOKPAGEBAR .metabookpagespans span.current {
@@ -138,12 +138,12 @@ body.mbPAGEPREVIEW #METABOOKFOOT #METABOOKPAGEBAR
     pointer-events: none;}
 body.mbPAGEPREVIEW #METABOOKFOOT #METABOOKPAGEBAR
   .metabookpagespans span.current {
-    font-size: 200%; height: 75%;}
+    font-size: 200%; height: 100%;}
 
 #METABOOKFOOT #METABOOKPAGEBAR #METABOOKPAGEPROGRESS {
     box-sizing: content-box; border-right: solid darkblue 2px;
-    position: absolute; bottom: 2px; left: 0px;
-    width: 33%; height: 50%; 
+    position: absolute; bottom: 0px; left: 0px;
+    width: 33%; height: 22px; 
     background-color: rgba(162,181,205,0.8);
     pointer-events: none;
     z-index: 15;}
@@ -151,7 +151,7 @@ body.mbPAGEPREVIEW #METABOOKFOOT #METABOOKPAGEBAR
     box-sizing: content-box;
     /* border-left: dotted rgba(0,0,255,0.5) 2px; border-right: dotted rgba(0,0,255,0.5) 2px; */
     position: absolute; bottom: 0px; left: 10%; width: 0%;
-    background-color: rgba(0,0,255,0.3); height: 50%;
+    background-color: rgba(0,0,255,0.3); height: 60%;
     border-top-left-radius: 4px; border-top-right-radius: 4px;
     pointer-events: none;
     z-index: 45;}
